# Qualtran

./: .gitattributes  .gitignore  .markdownlintrc  .readthedocs.yaml  CITATION.cff  CONTRIBUTING.md  Hubbard Model.ipynb  MANIFEST.in  README.md  SUPPORT.md  Untitled.ipynb  Untitled1.ipynb  conftest.py  mod_exp_bloq.json  mod_exp_cbloq.json  pyproject.toml  requirements-minimal.txt  requirements.txt  setup.py
.agents/rules/: python_docstrings.md  python_uv.md
.github/: SECURITY.md  actionlint.yaml
check/: all  autogenerate-notebooks  experimental-rsqualtran  format-incremental  mypy  mypy-dev-tools  pylint  pylint-changed-files  pytest  pytest-and-incremental-coverage  pytest-changed-files  pytest-changed-files-and-incremental-coverage  pytest-dev-tools  pytest-full  pytest-minimal-install  pytest-notebook  pytest-quick  ruff
cirq_qubitization/: Unitary Iteration.ipynb  __init__.py  alt_keep_qrom.py  alt_keep_qrom_test.py  and_gate-adjoint.ipynb  and_gate.ipynb  and_gate.py  and_gate_test.py  apply_gate_to_lth_target.ipynb  apply_gate_to_lth_target.py  apply_gate_to_lth_target_test.py  arithmetic_gates.py  arithmetic_gates_test.py  atoms.py  bit_tools.py  bit_tools_test.py  decompose_protocol.py  decompose_protocol_test.py  gate_with_registers.ipynb  gate_with_registers.py  gate_with_registers_test.py  gates_with_registers_test.py  generic_select.ipynb  generic_select.py  generic_select_test.py  generic_subprepare.ipynb  generic_subprepare.py  generic_subprepare_test.py  hubbard.ipynb  hubbard_model.ipynb  hubbard_model.py  hubbard_model_test.py  jupyter_autogen.py  jupyter_autogen_factories.py  jupyter_autogen_test.py  jupyter_data.py  jupyter_factory_functions.py  jupyter_tools.py  jupyter_tools_test.py  multi_target_cnot.py  (+31 more)
dev_tools/: README.md  __init__.py  autogenerate-bloqs-notebooks-v2.py  autogenerate-bloqs-notebooks.py  bibliography.ipynb  bloq-method-overrides-report.py  bloq-quickstarter.html  bloq-report-card.ipynb  build-docs-preview.py  build-protos.sh  build-reference-docs-2.py  build-reference-docs.py  build_api_docs.py  check-incremental-coverage-annotations.py  check-notebook-tests.py  check.py  check_incremental_coverage_annotations.py  clean-notebooks.py  clean-stage-2-doc-outputs.py  costing-report-card.ipynb  crazy.html.j2  dump-bloq-manifest.py  dump-ui-data.py  env_tools.py  execute-notebooks.py  execute_notebooks.py  generate-l1-reference.py  git_env_tools.py  github_repository.py  how-to-build-the-docs.md  how-to-cut-a-release.md  incremental_coverage.py  incremental_coverage_test.py  modexp_small.json  prepared_env.py  pypath  pyproject.toml  render_notebook_html.py  shell_tools.py  shell_tools_test.py  (+3 more)
dev_tools/conf/: .pylintrc  mypy.ini
dev_tools/qualtran_dev_tools/: __init__.py  all_call_graph.py  all_call_graph_test.py  bloq_finder.py  bloq_report_card.py  cirq_ft_jupyter_autogen_factories.py  clean_notebooks.py  execute_with_timeout.py  execute_with_timeout_test.py  git_tools.py  incremental_coverage.py  incremental_coverage_test.py  jupyter_autogen.py  jupyter_autogen_test.py  jupyter_autogen_v2.py  notebook_execution.py  notebook_execution_test.py  notebook_specs.py  parse_docstrings.py  parse_docstrings_test.py  prepared_env.py  pylint_bloq_checkers.py  pylint_copyright_checker.py  pylint_copyright_checker_test.py  reference_docs.py  scratch.py  shell_tools.py  shell_tools_test.py  tensor_classical_consistent.py  tensor_from_classical_test.py  tensor_report_card.py  write_if_different.py
dev_tools/qualtran_dev_tools/make_reference_docs/: __init__.py  _linking_writer.py  _make.py  _page.py  _render_context.py
dev_tools/qualtran_dev_tools/make_reference_docs/_components/: aliases.py  render_docstring.py  render_signature.py
dev_tools/qualtran_dev_tools/make_reference_docs/_pages/: render_major_class.py  render_module.py  render_toc.py
dev_tools/repomix/: Qualtran_Quantum_For_Loop_and_Hamming_Weight_Phasing.ipynb  README.md  repomix-driver.py  to-textproto-lines.py
dev_tools/requirements/: Dockerfile  README  constrain.txt  dev.env.compiled.txt  dev.env.txt  docs.env.txt  export-from-uv-lock.sh  format.env.txt  pip-tools.env.txt  pylint.env.txt  pytest.env.txt  re-pip-compile-in-docker.sh  re-pip-compile.sh  reqs.py  reqs_test.py  runtime.env.txt
dev_tools/requirements/envs/: dev.env.txt  docs.env.txt  format.env.txt  mypy.env.txt  pip-tools.env.txt  pylint.env.txt  pytest.env.txt  runtime.env.txt
dev_tools/templates/: class.jinja  function.jinja  module.jinja  page.jinja  type_alias.jinja
docs/: .gitignore  Adjoint.ipynb  Autodoc.ipynb  Controlled.ipynb  DataTypes.ipynb  Makefile  Protocols.ipynb  bloq_infra.rst  conf.py  gate_with_registers.ipynb  how_to_test_bloqs.md  index.rst  qcall.md
experimental/rsqualtran/: Cargo.toml  Readme.md  build.rs  pyproject.toml
experimental/rsqualtran/example_qlts/: composite_alu.qlt  cswap.in.txt  cswap.qlt  fastsim_cswap.sh  fastsim_negate_large.sh  fastsim_product.sh  negate-large.in.txt  negate-large.qlt  negate.qlt  product.in.txt  product.out.ref.txt  product.qlt  testnd3grid.qlt
experimental/rsqualtran/python/rsqualtran/: .gitignore  __init__.py  fastsim.py  fastsim_test.py  nodes.py  nodes_test.py
experimental/rsqualtran/python/scripts/: fastsim-negate.py
experimental/rsqualtran/src/: lib.rs  nodes.rs  parser.rs  python.rs
experimental/rsqualtran/src/fastsim/: Readme.md  compiler.rs  decompiler.rs  gates.rs  mod.rs  vm.rs
experimental/rsqualtran/tests/: bigint_tests.rs  cli_tests.rs  compiler_tests.rs  gates_tests.rs  parser_tests.rs  vm_tests.rs
qualtran/: Adjoint.ipynb  Adjoint_test.py  Autodoc.ipynb  Autodoc_test.py  Controlled.ipynb  Controlled_test.py  DataTypes.ipynb  DataTypes_test.py  Protocols.ipynb  Protocols_test.py  __init__.py  _version.py  bit_tools.py  bit_tools_test.py  conftest.py  jupyter_autogen.py  jupyter_autogen_factories.py  jupyter_autogen_test.py  jupyter_tools.py  jupyter_tools_test.py  qir_example.ipynb  scratch.py  testing.py  testing_test.py
qualviz/: package-lock.json  package.json  tsconfig.json  webpack.config.js
(+2287 files in other folders)
