[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = 'qualtran'
dynamic = ["version"]
author = "Google Quantum AI"
author_email = "mpharrigan@google.com"
description = "Software for fault-tolerant quantum algorithms research."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    # core dependencies
    "attrs>=23.2.0",
    "cachetools>=5.3",
    "typing_extensions>=4.10.0",
    "networkx",
    "numpy>=1.26,<3.0",
    "sympy",
    "cirq-core~=1.4",
    "fxpmath",
    "galois",

    # drawing
    "notebook",
    "nbconvert",
    "nbformat",
    "pydot",
    "ipython",
    "matplotlib",
    "ipywidgets",

    # ui
    "dash",
    "plotly",

    # quimb simulation
    "quimb",

    # qsharp resource estimator interop
    "qsharp",
    "qsharp-widgets",

    # qref bartiq interop
    "qref==0.11.0",
    "bartiq==0.12.1",

    # pyzx interop
    "pyzx",

    # Pennylane interop
    "pennylane",

    # serialization
    "protobuf",

    # rotation_synthesis
    "mpmath",

    # flasq integration
    "frozendict",
    "pandas >= 2.0",
    "seaborn",
    "joblib",
    "tqdm",
]

[tool.hatch.version]
path = "qualtran/_version.py"

[dependency-groups]
dev = [
    { include-group = "test"},
    { include-group = "typing"},
    { include-group = "lint"},
    { include-group = "format"},
    { include-group = "doc"},
]

test = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-xdist",

    # test executing notebooks
    "ipykernel",
    "filelock",

    # chemistry resource estimates
    "openfermion[resources]",
]

typing = [
    "mypy~=1.14",
    "mypy-protobuf",
    "sympy",
]

lint = [
    "pylint~=3.3.1",
    "ruff~=0.15.0",

    # for checking _test.py files
    "pytest",
    "openfermion[resources]",

    # dev tools
    "tensorflow-docs",
    "sphinx",
    "filelock",
    "griffe",
    "mdit-py-plugins",
]

format = [
    "flynt~=0.60",
    "black~=24.8.0",
    "isort~=5.10.1",
    "ruff~=0.15.0",
]

doc = [
    "ipywidgets",
    "nbconvert",
    "nbformat",
    "sphinx",
    "sphinx-autobuild",
    "pydata-sphinx-theme",
    "myst-nb",
    "tensorflow-docs~=2023.5.24",
    "griffe~=1.0",
]

[tool.black]
line-length = 100
skip-string-normalization = true
skip-magic-trailing-comma = true
exclude = "qualtran/protos/*"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    "qualtran/protos/*",
    "*_pb2.py",
    "*.ipynb",
]

[tool.ruff.lint]
select = [
    "E", # pycodestyle
    "F", # pyflakes
    # "I", # isort (disabled until we switch formatters)
    "W", # pycodestyle warnings
    "PL", # pylint
]
ignore = [
    # From the default ruleset:
    "E741", # ambiguous variable name 'l', 'O', or 'I'
    "E743", # ambiguous function definition
    "E731", # assigning a lambda expression to a variable

    # Handled by the formatter
    "E501", # line too long (let ruff format handle this)
    "W291", # trailing whitespace
    "W293", # blank line contains whitespace

    # We productively use these
    "PLC0415", # import outside top-level
    "PLW2901", # loop variable overwritten
    "PLC0206", # Extracting value from dictionary without calling .items()
    "PLW0406", # Module import itself

    # Pylint 'refactor' rules
    "PLR0913", # Too many arguments
    "PLR0912", # Too many branches
    "PLR0915", # Too many statements
    "PLR0914", # Too many local variables
    "PLR2004", # Magic value used in comparison
    "PLR0911", # Too many return statements
    "PLR1704", # Redefining argument with the local name
    "PLR1714", # Consider merging multiple comparisons
    "PLR1730", # replace if with min, max. Can be enabled.

    # Might be enabled at some point
    "PLR0402" # Prevalent in the rotation_synthesis submodule.
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    # Ruff wants us to redundantly re-export symbols in __init__.py files, but the
    # automated fix isn't in the stable release yet.
    "F401", # Unused import
]


[tool.ruff.lint.isort]
order-by-type = false
force-to-top = []
split-on-trailing-comma = false

[tool.ruff.format]
quote-style = "preserve"
skip-magic-trailing-comma = true

[tool.isort]
profile = 'black'
order_by_type = false
line_length = 100
remove_redundant_aliases = true
skip_glob = ["qualtran/protos/*"]

[tool.pytest.ini_options]
filterwarnings = [
    'ignore::DeprecationWarning:quimb.linalg.approx_spectral:',
    'ignore:.*standard platformdirs.*:DeprecationWarning:jupyter_client.*'
]
# we define classes like TestBloq etc. which pytest tries to collect,
# so if you really want to collect a class as a test use '*TestSuite'.
# (but please stick to the convention of test_* functions)
python_classes = '*TestSuite'
addopts = '--strict-markers'
markers = [
    "slow: slow tests.",
    "notebook: unit tests that execute a notebook."
]
