[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qualtran-dev-tools"
version = "0.1.0"
description = "Local development tools for the Qualtran project."
requires-python = ">=3.12"
dependencies = [
    "qualtran",
]

[tool.setuptools]
packages = ["qualtran_dev_tools"]

[tool.uv.sources]
qualtran = { path = "../" }
