[package]
name = "rsqualtran"
version = "0.1.0"
edition = "2021"
autobins = false

[lib]
name = "_rsqlt"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "qlt_fastsim"
path = "src/bin/qlt_fastsim.rs"

[dependencies]
regex = "1.10.2"
serde = { version = "1.0", features = ["derive"], optional = true }

# Optional: Python
[dependencies.pyo3]
version = "0.29.0"
features = ["extension-module"]
optional = true

[features]
default = ["py"]
py = ["dep:pyo3"]
extension-module = ["pyo3/extension-module"]
wasm = ["dep:serde"]

[build-dependencies]
pyo3-build-config = "0.29.0"

[profile.release]
debug = "line-tables-only"
