[project]
name = "rsqualtran"
requires-python = ">=3.12"
version = "0.1.0"
dependencies = [
    "qualtran",
]

[tool.uv.sources]
qualtran = { path = "../..", editable = true }

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]


[tool.maturin]
python-source = "python"
module-name = "rsqualtran._rsqlt"
